Prevent layout shifting

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -72,6 +72,7 @@ a {
 }
 
 .button {
+  margin-bottom: 0 !important;
   transition-duration: .2s;
 }
 
